# pcg-random-lib

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  README.md  ReadMe.md
include/: pcg-random-lib.hpp
include/TypeAliases/: Datastructs.hpp  Primitives.hpp  Smartpointers.hpp
src/: CMakeLists.txt  pcg-random-lib.cpp
